--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/MatanYemini/node-sqs#readme",
   "dependencies": {
+    "@aws-sdk/types": "^3.29.0",
     "aws-sdk": "^2.983.0",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
